--- a/src/app/settings/settings/settings.component.scss
+++ b/src/app/settings/settings/settings.component.scss
@@ -74,3 +74,22 @@ mat-form-field {
     padding: 100px 0;
   }
 }
+
+.user-card {
+  margin-top: 24px;
+  p {
+    display: inline-block;
+    font-size: 18px;
+    margin-top: 6px;
+    padding: 8px 24px;
+    background-color: #eceff1;
+    border-radius: 5px;
+    i {
+      margin-right: 8px;
+    }
+  }
+  button {
+    margin: 24px auto 0;
+    display: block;
+  }
+}
