feat(settings): mat-list追加 #72

--- a/src/app/settings/settings/settings.component.html
+++ b/src/app/settings/settings/settings.component.html
@@ -108,6 +108,9 @@
                 変更する
               </button>
             </div>
+            <mat-list dense>
+              <h1 matSubheader>購入履歴</h1>
+            </mat-list>
           </ng-container>
           <ng-template #register>
             <button
