feat(payment): component追加 #72

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -96,7 +96,7 @@
         <mat-icon>help</mat-icon>
         <span>使い方</span>
       </button>
-      <button mat-menu-item>
+      <button routerLink="/payment" mat-menu-item>
         <mat-icon>attach_money</mat-icon>
         <span>広告を非表示にする</span>
       </button>
