--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <h2 class="heading">広告を非表示にする</h2>
   <div class="payment">
     <ng-container *ngIf="!paidAds; else complete">
+      <h2 class="heading">広告を非表示にする</h2>
       <mat-vertical-stepper linear="ture">
         <mat-step editable="false">
           <ng-template matStepLabel>クレジットカード</ng-template>
@@ -72,7 +72,7 @@
     </ng-container>
     <ng-template #complete>
       <div class="complete">
-        <p>広告を非表示にしました</p>
+        <p>広告を非表示にしました。</p>
         <p>ありがとうございました！</p>
         <button routerLink="/" mat-raised-button color="primary">
           トップへ戻る
