--- a/src/app/settings/settings/settings.component.html
+++ b/src/app/settings/settings/settings.component.html
@@ -110,6 +110,24 @@
             </div>
             <mat-list dense>
               <h1 matSubheader>購入履歴</h1>
+              <mat-list-item>
+                <span matLine
+                  >{{
+                    (charge.invoice?.lines?.data)[0]?.description ||
+                      charge.description
+                  }}
+                  / {{ charge.amount | number }}円</span
+                >
+                <span matLine>{{
+                  charge.created * 1000 | date: 'yyyy/MM/dd'
+                }}</span>
+                <a mat-icon-button [href]="charge.receipt_url" target="_blank">
+                  <mat-icon inline>receipt</mat-icon>
+                </a>
+              </mat-list-item>
+              <mat-list-item *ngIf="!charge"
+                >購入履歴はありません</mat-list-item
+              >
             </mat-list>
           </ng-container>
           <ng-template #register>
