feat(detail): キャンペーンリンク追加 #86

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,13 @@ img {
   max-height: 100%;
 }
 
+.link {
+  padding-left: 8px;
+  font-size: 12px;
+  width: 12px;
+  height: 12px;
+}
+
 .search-title {
   font-size: 24px;
 }
