--- a/src/app/electron-detail/electron-detail/electron-detail.component.html
+++ b/src/app/electron-detail/electron-detail/electron-detail.component.html
@@ -19,13 +19,10 @@
             <mat-icon class="detail__icon">create</mat-icon>
           </button>
           <div class="detail__store-link">
-            <a
-              routerLink="/code-detail/{{ electronCard.cardId }}"
-              fragment="store"
-              mat-button
-            >
-              <mat-icon class="detail__icon">store</mat-icon>
-              <span>ストアページ</span>
+            <a [href]="electronCard.campaign" target="_blank" mat-button>
+              <mat-icon class="detail__icon">info</mat-icon>
+              <span>キャンペーン情報</span>
+              <mat-icon class="link">open_in_new</mat-icon>
             </a>
           </div>
         </div>
@@ -46,7 +43,7 @@
       <h2>残高やポイントの有効期限</h2>
       <p>{{ electronCard.expiration }}</p>
     </div>
-    <div class="store" id="store">
+    <div class="store">
       <h2 class="store__title">使えるお店</h2>
       <mat-tab-group mat-align-tabs="center">
         <mat-tab label="カテゴリ別">
