--- a/src/app/intl/terms/terms.component.html
+++ b/src/app/intl/terms/terms.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="terms">
-    <h1 class="terms__header">利用規約</h1>
+    <h2 class="terms__heading">利用規約</h2>
     <p class="terms__content">
       PAYpick(仮)利用規約（以下「本規約」といいます）は、<a
         href="https://twitter.com/mikatahiro"
@@ -8,7 +8,7 @@
         >ちゃま</a
       >（以下「当社」といいます）が「PAYpick」（以下「本サイト」といいます）にて提供するサービス（以下「本サービス」といいます）をご利用いただくための規約であり、当社が提供する本サービスに適用されます。
     </p>
-    <h2 class="terms__title">第1条（サービスのご利用に際して）</h2>
+    <h3 class="terms__title">第1条（サービスのご利用に際して）</h3>
     <p class="terms__content">
       1.本サービスの利用者（以下「利用者」といいます）が本サービスをご利用された場合、本規約の内容を承諾いただいたものとします。
     </p>
@@ -19,7 +19,7 @@
       3.本サービスのうち、一部のサービスでは利用規約やガイドライン等を別途定める場合があります。その場合、それらも合わせてご参照いただき、承諾いただいた上で各サービスをご利用ください。なお、各サービスの利用規約・ガイドラインなどにおいて本規約の一部の適用を排除する、又は本規約と異なる事項を定める場合があります。その場合は、各サービスの利用規約・ガイドラインなどの条項が本規約に優先して効力を有するものとします。但し、本規約において、各サービスの利用規約・ガイドラインなどの条項に優先する旨を規定している場合は、この限りではありません。
     </p>
 
-    <h2 class="terms__title">第2条（本サービスの内容）</h2>
+    <h3 class="terms__title">第2条（本サービスの内容）</h3>
     <p class="terms__content">1.本サービスの内容は、以下の各号のとおりです。</p>
     <p class="terms__content">電子決済等に関する情報の掲載・閲覧サービス</p>
     <p class="terms__content">その他上記各号に付随関連するサービス</p>
@@ -30,7 +30,7 @@
       3.利用者が利用可能な本サービスは、当社がその時点で提供しているものとします。
     </p>
 
-    <h2 class="terms__title">第3条（個人情報の取扱い）</h2>
+    <h3 class="terms__title">第3条（個人情報の取扱い）</h3>
     <p class="terms__content">
       1.利用者は、本サービスの利用に際して利用者ご本人に関する情報を当社に対して提供する場合、真実、正確かつ完全な情報を提供しなければなりません。
     </p>
@@ -38,17 +38,17 @@
       2.利用者は、本サービスの利用に際して登録するパスワードを不正に利用されないよう自らの責任で厳重に管理しなければなりません。当社は、登録されたパスワードを利用して行なわれた一切の行為を、利用者ご本人の行為とみなすことができます。
     </p>
 
-    <h2 class="terms__title">第4条（ご利用のための設備）</h2>
+    <h3 class="terms__title">第4条（ご利用のための設備）</h3>
     <p class="terms__content">
       利用者が本サービスをご利用になるためには、Webにアクセスしていただく必要があります。利用者には自らの責任と費用で必要な機器、ソフトウェアを適切に準備、操作していただく必要があり、当社は、利用者がWebにアクセスされるための準備、操作方法などについては一切関与いたしません。また、閲覧に必要なアプリケーションなどを利用する際には、そのソフトウェアの配布元の規定が適用されます。
     </p>
 
-    <h2 class="terms__title">第5条（ご利用の目的について）</h2>
+    <h3 class="terms__title">第5条（ご利用の目的について）</h3>
     <p class="terms__content">
       本サービスは、利用者の私的かつ非営利目的でのご利用に限定して提供しています。当社が事前に承諾した場合を除き、本サービスのご利用や本サービスへのアクセスについて、その全部または一部を問わず、営業活動その他の営利を目的としたご利用又はそれに準ずる行為、そのための準備行為としてのご利用は固くお断りいたします。また、その他、宗教活動、政治活動又はそれに類する目的での利用も行ってはならないものとします。
     </p>
 
-    <h2 class="terms__title">第6条（著作権、財産権その他の権利）</h2>
+    <h3 class="terms__title">第6条（著作権、財産権その他の権利）</h3>
     <p class="terms__content">
       1.本サービスに含まれているコンテンツ及び個々の情報、商標、画像、動画、広告、デザイン等（以下「コンテンツ等」といいます）に関する著作権、商標権その他の財産権は当社もしくは当該コンテンツ等を創作した著作者又は著作権者に帰属しています。
     </p>
@@ -62,7 +62,7 @@
       4.利用者が前項に反する行為によって被った損害については、当社は一切の責任を負いかねます。また、利用者がこれらの行為によって利益を得た場合、当社はその利益相当額を請求できる権利を有するものとします。
     </p>
 
-    <h2 class="terms__title">第7条（サービス内容の変更・終了等）</h2>
+    <h3 class="terms__title">第7条（サービス内容の変更・終了等）</h3>
     <p class="terms__content">
       1.当社は、本サービス（本サービスにおいて提供する情報の内容を含みます）の全部又は一部を利用者へ事前に通知することなく、変更、中断、又は終了することがあります。それにより利用者や第三者が損害を被った場合でも、当社は一切の責任を負いかねます。
     </p>
@@ -83,17 +83,17 @@
       その他運用上、技術上の理由により当社が必要と判断した場合
     </p>
 
-    <h2 class="terms__title">第8条（サービスご利用の制限）</h2>
+    <h3 class="terms__title">第8条（サービスご利用の制限）</h3>
     <p class="terms__content">
       本サービスのうち、一部のサービスでは、一定の要件を満たした方のみが利用できるサービスを提供することがあります。
     </p>
 
-    <h2 class="terms__title">第9条（利用者へのご連絡手段）</h2>
+    <h3 class="terms__title">第9条（利用者へのご連絡手段）</h3>
     <p class="terms__content">
       当社からのご連絡、通知は、当社所定のサイトへの掲載又はメールを送信することをもって行うことします。但し、当社が必要と判断した場合は、郵便や電話など他の手段も使用する場合があります。
     </p>
 
-    <h2 class="terms__title">第10条（免責事項）</h2>
+    <h3 class="terms__title">第10条（免責事項）</h3>
     <p class="terms__content">
       本サービスのご利用は、利用者ご自身の判断と責任において、下記の項目を承諾した上でご利用いただくものとします。
     </p>
@@ -112,17 +112,17 @@
       4.本サービス中に掲載される広告（その形態は問いません）や本サービス中にリンクされた外部サイトについて、当社は、その内容の正確性、速報性、完全性、商品性、又は合目的性等について、いかなる保証（明示的、黙示的を問いません）もいたしません。また、利用者や第三者に損害や不利益が発生した場合でも、当社は一切の責任を負いかねます。利用者は、広告内容及びリンクされた外部サイトに関してもご自身の判断と責任でご利用ください。
     </p>
 
-    <h2 class="terms__title">第11条（情報の利用）</h2>
+    <h3 class="terms__title">第11条（情報の利用）</h3>
     <p class="terms__content">
       当社は、本サービスを通じて得た情報、本サービスを利用された利用者より提供又は入力された情報（これらの情報には、事業者・サービスの評価等に関する情報、サービスの供給・事業者に関する情報を含み、個人又は法人を特定する情報を除きます）を、情報の分析・評価、第三者への情報提供等のために利用することができるものとします。
     </p>
 
-    <h2 class="terms__title">第12条（他サイトへのリンク）</h2>
+    <h3 class="terms__title">第12条（他サイトへのリンク）</h3>
     <p class="terms__content">
       本サービス中に、他のWebサイトやリソースへのリンクを設置したり、また第三者が他のWebサイトやリソースへのリンクやトラックバックを登録する場合があります。リンク先のWebサイトやリソースはそれぞれの運営者が独立して管理しており、当社ではその内容や安全性などについては関知しておらず、一切の責任を負いかねます。
     </p>
 
-    <h2 class="terms__title">第13条（禁止行為）</h2>
+    <h3 class="terms__title">第13条（禁止行為）</h3>
     <p class="terms__content">
       1.当社は下記の行為を禁止事項と定め、利用者はこれを行わないこととします。
     </p>
@@ -157,7 +157,7 @@
       当社が行った上記措置に起因して利用者に損害が生じても、当社は一切の責任を負いかねます。
     </p>
 
-    <h2 class="terms__title">第14条（本規約の変更）</h2>
+    <h3 class="terms__title">第14条（本規約の変更）</h3>
     <p class="terms__content">
       1.当社は、本規約を変更できるものとし、当社が任意に定めた効力発生日から変更後の本規約の効力が発生するものとします。
     </p>
@@ -168,7 +168,7 @@
       3.前項の規定は、本規約の変更が利用者の一般の利益に適合する場合には適用しないものとします。
     </p>
 
-    <h2 class="terms__title">第15条（準拠法、裁判管轄）</h2>
+    <h3 class="terms__title">第15条（準拠法、裁判管轄）</h3>
     <p class="terms__content">
       本規約は、日本法に基づき解釈されるものとします。本規約に関して訴訟の必要が生じた場合には、訴額に応じて東京簡易裁判所又は東京地方裁判所を第一審の専属的合意管轄裁判所とします。
     </p>
