--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -92,4 +92,7 @@
   border: 1px solid rgba(0, 0, 0, 0.12);
   line-height: 1;
   box-sizing: border-box;
+  @include sp {
+    display: none;
+  }
 }
