feat(legal): 特定商取引に関する表記 #81

--- a/src/app/intl/legal/legal.component.html
+++ b/src/app/intl/legal/legal.component.html
@@ -1,3 +1,59 @@
-<div class="container">
-  <p>特定商取引に関する表記</p>
+<div class="legal">
+  <h2 class="legal__heading">特定商取引に関する表記</h2>
+  <div class="legal__contents">
+    <section>
+      <h3>サービス名</h3>
+      <p>PAYpick</p>
+    </section>
+
+    <section>
+      <h3>運営者</h3>
+      <p>高見鴻志</p>
+    </section>
+
+    <section>
+      <h3>ホームページ</h3>
+      <p><a routerLink="/">https://paybook-51ac6.web.app/</a></p>
+    </section>
+
+    <section>
+      <h3>メールアドレス</h3>
+      <p>hiroponpoko07@gmail.com</p>
+    </section>
+
+    <section>
+      <h3>電話番号</h3>
+      <p>090-9918-7788</p>
+      <p>
+        ※お取引やサービスについてのお問い合わせは電話では受け付けておりません
+      </p>
+    </section>
+
+    <section>
+      <h3>販売価格帯</h3>
+      <p>商品に表記された価格に準じます</p>
+    </section>
+
+    <section>
+      <h3>代金の支払方法</h3>
+      <p>
+        クレジットカード決済（Stripe）のみとなります。
+        <br />
+        <a href="https://stripe.com/jp" target="_blank"
+          >ストライプジャパン株式会社</a
+        >
+        （以下、Stripe社）が提供する決済システム「Stripe」を利用します。Stripeの利用条件、引き落とし時期及びその他Stripeに関する事項は、Stripe社が定める規約によるものとします。
+      </p>
+    </section>
+
+    <section>
+      <h3>代金の支払時期</h3>
+      <p>ご利用のカード会社の引き落とし日となります。</p>
+    </section>
+
+    <section>
+      <h3>返金について</h3>
+      <p>基本的には返金には応じません。</p>
+    </section>
+  </div>
 </div>
