refactor(header): スペルミス修正 #81

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -60,7 +60,7 @@
       </button>
       <button
         [routerLink]="['/create/form']"
-        [queryParams]="{ type: 'cledit' }"
+        [queryParams]="{ type: 'credit' }"
         mat-menu-item
       >
         クレジットカード
