refactor(code): param修正 #81

--- a/src/app/code-detail/code-detail/code-detail.component.html
+++ b/src/app/code-detail/code-detail/code-detail.component.html
@@ -13,7 +13,7 @@
           <button
             class="detail__btn"
             [routerLink]="['/create/form']"
-            [queryParams]="{ id: codeCard.cardId, type: 'qrCode' }"
+            [queryParams]="{ id: codeCard.cardId, type: 'code' }"
             mat-icon-button
           >
             <mat-icon class="detail__icon">create</mat-icon>
