--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -46,7 +46,7 @@
     <mat-menu #addition="matMenu">
       <button
         [routerLink]="['/create/form']"
-        [queryParams]="{ type: 'qrCode' }"
+        [queryParams]="{ type: 'code' }"
         mat-menu-item
       >
         モバイル決済
